--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Password Generator</h1>
 <div>
   <label for="length">Enter Length</label>
-  <input type="text" />
+  <input type="text" (input)="onChangeLength($event.target.value)" />
 </div>
 <div>
   <label for="letters">Use Letters</label>
